[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/PetUI.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color(0.196078, 0.196078, 0.196078, 0.901961)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color(0.290196, 0.290196, 0.290196, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color(0.45098, 0.45098, 0.45098, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color(0.8, 0.8, 0, 1)

[node name="PetUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300
margin_top = -200
margin_right = 300
margin_bottom = 200
custom_styles/panel = SubResource( 1 )

[node name="Title" type="Label" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100
margin_top = 10
margin_right = 100
margin_bottom = 30
text = "Pets"
align = 1

[node name="PetList" type="ItemList" parent="Background"]
anchor_right = 0.3
anchor_bottom = 0.9
margin_left = 20
margin_top = 40
margin_right = -10
margin_bottom = -10
custom_styles/bg = SubResource( 2 )

[node name="PetInfoPanel" type="Panel" parent="Background"]
anchor_left = 0.35
anchor_right = 1.0
anchor_bottom = 0.9
margin_left = 10
margin_top = 40
margin_right = -20
margin_bottom = -10
custom_styles/panel = SubResource( 3 )

[node name="PetName" type="Label" parent="Background/PetInfoPanel"]
anchor_right = 1.0
margin_left = 10
margin_top = 10
margin_right = -10
margin_bottom = 30
text = "Pet Name"
align = 1

[node name="Level" type="Label" parent="Background/PetInfoPanel"]
margin_left = 10
margin_top = 40
margin_right = 100
margin_bottom = 60
text = "Level 1"

[node name="ExpBar" type="ProgressBar" parent="Background/PetInfoPanel"]
anchor_left = 0.3
anchor_right = 1.0
margin_left = 10
margin_top = 40
margin_right = -10
margin_bottom = 60
value = 50.0

[node name="MoodBar" type="ProgressBar" parent="Background/PetInfoPanel"]
anchor_right = 1.0
margin_left = 10
margin_top = 70
margin_right = -10
margin_bottom = 90
custom_styles/fg = SubResource( 5 )
value = 100.0

[node name="Stats" type="Label" parent="Background/PetInfoPanel"]
anchor_right = 1.0
margin_left = 10
margin_top = 100
margin_right = -10
margin_bottom = 180
text = "Stats:"
autowrap = true

[node name="SkillsList" type="ItemList" parent="Background/PetInfoPanel"]
anchor_right = 1.0
margin_left = 10
margin_top = 190
margin_right = -10
margin_bottom = 270
custom_styles/bg = SubResource( 2 )

[node name="SetActiveButton" type="Button" parent="Background/PetInfoPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100
margin_top = -40
margin_right = -10
margin_bottom = -10
custom_styles/normal = SubResource( 4 )
text = "Set Active"

[node name="CommandButton" type="Button" parent="Background/PetInfoPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 10
margin_top = -40
margin_right = 100
margin_bottom = -10
custom_styles/normal = SubResource( 4 )
text = "Command"

[node name="CloseButton" type="Button" parent="Background"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30
margin_top = 10
margin_right = -10
margin_bottom = 30
text = "X"

[connection signal="item_selected" from="Background/PetList" to="." method="_on_pet_list_item_selected"]
[connection signal="pressed" from="Background/PetInfoPanel/SetActiveButton" to="." method="_on_set_active_pressed"]
[connection signal="pressed" from="Background/PetInfoPanel/CommandButton" to="." method="_on_command_pressed"]
[connection signal="pressed" from="Background/CloseButton" to="." method="_on_close_button_pressed"]